Fixed the overflow in the root elements, updated the demo image with the latest changes

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body, #root {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color:  #1E1E1E;;
   color: whitesmoke;
